objects/ISR_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Activities__c</fullName>
        <inlineHelpText>number of activities for the month</inlineHelpText>
        <label>Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activities_to_Meetings__c</fullName>
        <formula>Activities__c  /  Meetings_Set__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activities to Meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activities_to_Opps__c</fullName>
        <formula>Activities__c  /  New_Opps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activities to Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose the user</inlineHelpText>
        <label>ISR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001oUGREA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meetings_Set__c</fullName>
        <inlineHelpText>number of meeting set</inlineHelpText>
        <label>Meetings Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meetings_to_Opps__c</fullName>
        <formula>Meetings_Set__c  /  New_Opps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meetings to Opps</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <inlineHelpText>Enter the last date of the month the entries are for.</inlineHelpText>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Opps__c</fullName>
        <inlineHelpText>number of new opportunities created</inlineHelpText>
        <label>New Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ISR Metrics</label>
    <nameField>
        <displayFormat>ISRM-{00000}</displayFormat>
        <label>ISR Metrics Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISR Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>